Fix some stylings

--- a/style.css
+++ b/style.css
@@ -6364,3 +6364,8 @@ span.rss-date {
   line-height: 38px;
   margin-bottom: 20px;
 }
+
+.page-id-62 .postcontainer .singlecontent h3 {
+  font-size: 30px;
+  padding: 15px 0;
+}
