--- a/style.css
+++ b/style.css
@@ -6365,7 +6365,7 @@ span.rss-date {
   margin-bottom: 20px;
 }
 
-.page-id-62 .postcontainer .singlecontent h3 {
+.page-id-62 #postcontainer .singlecontent h3 {
   font-size: 30px;
   padding: 15px 0;
 }
