--- a/style.css
+++ b/style.css
@@ -6396,3 +6396,8 @@ span.rss-date {
   font-size: 27px;
   padding-right: 24px;
 }
+
+.home .isotopecontainer {
+  margin-bottom: 0;
+  padding-bottom: 25px;
+}
